--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "nextjs-tailwindcss-typescript-eslint-prettier",
+  "name": "random-5e",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint .",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
-    "next": "^10.0.5",
+    "next": "^12.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -24,7 +26,7 @@
     "eslint-plugin-react": "^7.22.0",
     "postcss-import": "^14.0.0",
     "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.1.3"
   }
 }
