--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "framer-motion": "^6.2.8",
     "next": "^12.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
@@ -19,14 +24,11 @@
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "autoprefixer": "^10.2.1",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "postcss-import": "^14.0.0",
     "prettier": "^2.2.1",
-    "tailwindcss": "^3.0.23",
     "typescript": "^4.1.3"
   }
 }
